--- a/htdocs/license.html
+++ b/htdocs/license.html
@@ -28,7 +28,10 @@ var FRAME=0;
     <li><strong><a href="license.html">License</a></strong></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="http://sourceforge.jp/projects/mona/files/">Download</a></li>
+    <li><a href="http://d.hatena.ne.jp/higepon/">Devloper's blog</a></li>
     <li><a href="http://wiki.monaos.org/pukiwiki.php">Devloper's Wiki</a></li>
+    <li><a href="http://sourceforge.jp/projects/mona/">sf.jp Project page</a></li>
+
   </ul>
   <div id="sidemenu-end"></div>
 </div><!-- id="sidemenu" //-->
