--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -28,9 +28,10 @@ var FRAME=0;
     <li><a href="license.html">License</a></li>
     <li><strong><a href="contact.html">Contact</a></strong></li>
     <li><a href="http://sourceforge.jp/projects/mona/files/">Download</a></li>
-    <li><a href="http://d.hatena.ne.jp/higepon/">Devloper's blog</a></li>
-    <li><a href="http://wiki.monaos.org/pukiwiki.php">Devloper's Wiki</a></li>
-    <li><a href="http://sourceforge.jp/projects/mona/">sf.jp Project page</a></li>
+    <li><a href="http://sourceforge.jp/projects/mona/">Project page</a></li>
+    <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
+    <li><a href="http://d.hatena.ne.jp/higpeon/">Blog (Japanese)</a></li>
+    <li><a href="http://wiki.monaos.org/pukiwiki.php">Wiki (Japanese)</a></li>
   </ul>
   <div id="sidemenu-end"></div>
 </div><!-- id="sidemenu" //-->
