--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -30,7 +30,7 @@ var FRAME=0;
     <li><a href="http://sourceforge.jp/projects/mona/files/">Download</a></li>
     <li><a href="http://sourceforge.jp/projects/mona/">Project page</a></li>
     <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
-    <li><a href="http://d.hatena.ne.jp/higpeon/">Blog (Japanese)</a></li>
+    <li><a href="http://d.hatena.ne.jp/higepon/">Blog (Japanese)</a></li>
     <li><a href="http://wiki.monaos.org/pukiwiki.php">Wiki (Japanese)</a></li>
   </ul>
   <div id="sidemenu-end"></div>
