--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -63,6 +63,7 @@ Small, new and fast micro kernel operationg system written in C++.
 
 <!-- footer -->
 <div id="footer">
+<a href="http://sourceforge.net/donate/index.php?group_id=164970"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /> </a>
 Copyright &#169; 2002-2006 Higepon and the individuals listed on the ChangeLog entries. All rights reserved.
 </div><!-- id="footer" //-->
 
