--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -27,8 +27,8 @@ var FRAME=0;
     <li><a href="about.html">About</a></li>
     <li><a href="license.html">License</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="http://sourceforge.jp/projects/mona/files/">Download</a></li>
-    <li><a href="http://sourceforge.jp/projects/mona/">Project page</a></li>
+    <li><a href="download.html">Download</a></li>
+    <li><a href="project.html">Project page</a></li>
     <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
     <li><a href="http://d.hatena.ne.jp/higepon/">Blog (Japanese)</a></li>
     <li><a href="http://wiki.monaos.org/pukiwiki.php">Wiki (Japanese)</a></li>
