--- a/htdocs/project.html
+++ b/htdocs/project.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <link rel="stylesheet" type="text/css" media="screen" href="mona.css">
-   <title>MonaOS - Contact</title>
+   <title>MonaOS - Project</title>
 </head>
 <body>
 <div id="header">
@@ -25,8 +25,8 @@ var FRAME=0;
   <ul id="sidemenu-ul">
     <li><a href="index.html">News</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="license.html">License</a></li>
-    <li><strong><a href="contact.html">Contact</a></strong></li>
+    <li><strong><a href="license.html">License</a></strong></li>
+    <li><a href="contact.html">Contact</a></li>
     <li><a href="download.html">Download</a></li>
     <li><a href="project.html">Project page</a></li>
     <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
@@ -38,7 +38,7 @@ var FRAME=0;
 
 <div id="content">
 <div style="padding-bottom:25px;padding-top:10px;">
-Contact <img src="mailaddress_small.png">.
+MonaOS project page is at <a href="http://sourceforge.jp/projects/mona/">sourceforge.jp/projects/mona/</a>.
 </div>
 <div id="images">
 <img src="cui.png" alt="screenshot of CUI">
