--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -59,6 +59,11 @@ google_color_url = "6666FF";
   src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 </div><!-- id="ad" //-->
+<!-- google_ad_section_start -->
+<p>
+Mona OS is new, small and simple.<br>
+So, Mona OS may be suitable for education of Operating System at school.
+</p>
 
 <!-- news //-->
 <div class="news-date">Aug 6, 2006</div>File Server on Linux version 0.0.1 Relased (<a
@@ -77,12 +82,12 @@ href="http://sourceforge.jp/projects/mona/files/?release_id=18288#18288">Downloa
 <ul>
   <li>Network library uIP and HTTPD.</li>
 </ul>
-
+<!-- google_ad_section_end -->
 </div><!-- id="content" //-->
 
 <!-- footer -->
 <div id="footer">
-<a href="http://sourceforge.net/donate/index.php?group_id=164970"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /> </a>
+<a href="http://sourceforge.net/donate/index.php?group_id=164970"><img src="project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /> </a>
 Copyright &#169; 2002-2006 Higepon and the individuals listed on the ChangeLog entries. All rights reserved.
 </div><!-- id="footer" //-->
 
