--- a/htdocs/download.html
+++ b/htdocs/download.html
@@ -38,7 +38,7 @@ var FRAME=0;
 
 <div id="content">
 <div style="padding-bottom:25px;padding-top:10px;">
-Download released from <a href="http://sourceforge.jp/projects/mona/files">sourceforge.jp/projects/mona/files</a>.
+Download released files from <a href="http://sourceforge.jp/projects/mona/files">sourceforge.jp/projects/mona/files</a>.
 </div>
 <div id="images">
 <img src="cui.png" alt="screenshot of CUI">
@@ -67,7 +67,7 @@ google_color_url = "6666FF";
 
 <!-- footer -->
 <div id="footer">
-<a href="http://sourceforge.net/donate/index.php?group_id=164970"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /> </a>
+<a href="http://sourceforge.net/donate/index.php?group_id=164970"><img src="project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /> </a>
 Copyright &#169; 2002-2006 Higepon and the individuals listed on the ChangeLog entries. All rights reserved.
 </div><!-- id="footer" //-->
 
