--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -61,8 +61,8 @@ google_color_url = "6666FF";
 </div><!-- id="ad" //-->
 <!-- google_ad_section_start -->
 <p>
-Mona OS is new, small and simple.<br>
-So, Mona OS may be suitable for education of Operating System at school.
+Mona OS is new, small, simple and well structured.<br>
+So, Mona OS may be suitable for education of Operating System and program at school.
 </p>
 
 <!-- news //-->
@@ -71,6 +71,7 @@ href="https://sourceforge.jp/projects/mona/files/?release_id=21273#21273">Downlo
 <ul>
   <li>Full emulation of Mona Message and Shared Memory API.</li>
   <li>VFS support.</li>
+  <li>New file server compares favorably with old file server.</li>
 </ul>
 
 <!-- news //-->
