--- a/htdocs/project.html
+++ b/htdocs/project.html
@@ -38,7 +38,7 @@ var FRAME=0;
 
 <div id="content">
 <div style="padding-bottom:25px;padding-top:10px;">
-MonaOS project page is at <a href="http://sourceforge.jp/projects/mona/">sourceforge.jp/projects/mona/</a>.
+MonaOS project page is at <a href="http://sourceforge.net/projects/monaos">SourceForge.net: Mona OS</a>.
 </div>
 <div id="images">
 <img src="cui.png" alt="screenshot of CUI">
