--- a/htdocs/download.html
+++ b/htdocs/download.html
@@ -38,7 +38,7 @@ var FRAME=0;
 
 <div id="content">
 <div style="padding-bottom:25px;padding-top:10px;">
-Download released files from <a href="http://sourceforge.jp/projects/mona/files">sourceforge.jp/projects/mona/files</a>.
+Download released files from <a href="http://sourceforge.net/project/showfiles.php?group_id=164970">SourceForge.net Mona OS: Files</a>.
 </div>
 <div id="images">
 <img src="cui.png" alt="screenshot of CUI">
