--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -66,8 +66,8 @@ So, Mona OS may be suitable for education of Operating System and program at sch
 </p>
 
 <!-- news //-->
-<div class="news-date">Aug 6, 2006</div>File Server on Linux version 0.0.1 Relased (<a
-href="https://sourceforge.jp/projects/mona/files/?release_id=21273#21273">Download</a>).
+<div class="news-date">Aug 6, 2006</div>File Server on Linux version 0.0.1 Released (<a
+href="http://sourceforge.net/project/showfiles.php?group_id=164970&package_id=199726&release_id=450097">Download</a>).
 <ul>
   <li>Full emulation of Mona Message and Shared Memory API.</li>
   <li>VFS support.</li>
@@ -79,7 +79,7 @@ href="https://sourceforge.jp/projects/mona/files/?release_id=21273#21273">Downlo
 
 <!-- news //-->
 <div class="news-date">Jan 4, 2006</div>Mona OS ver.0.3.0alpha7 (<a
-href="http://sourceforge.jp/projects/mona/files/?release_id=18288#18288">Download</a>).
+href="http://sourceforge.net/project/showfiles.php?group_id=164970&package_id=205274&release_id=449836">Download</a>).
 <ul>
   <li>Network library uIP and HTTPD.</li>
 </ul>
