--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -66,6 +66,19 @@ So, Mona OS may be suitable for education of Operating System and program at sch
 </p>
 
 <!-- news //-->
+<div class="news-date">Oct 9, 2006</div>Mona OS ver.0.3.0alpha8 (<a
+href="http://sourceforge.net/project/showfiles.php?group_id=164970&package_id=205274">Download</a>).
+<ul>
+  <li>simple web browser</li>
+  <li>VFS support</li>
+  <li>switch to Subversion</li>
+  <li>support build on Linux with Mingw</li>
+  <li>enhanced libc support</li>
+  <li>APM support</li>
+  <li>GUI selector on boot</li>
+</ul>
+
+<!-- news //-->
 <div class="news-date">Aug 6, 2006</div>File Server on Linux version 0.0.1 Released (<a
 href="http://sourceforge.net/project/showfiles.php?group_id=164970&package_id=199726&release_id=450097">Download</a>).
 <ul>
@@ -78,11 +91,13 @@ href="http://sourceforge.net/project/showfiles.php?group_id=164970&package_id=19
 <div class="news-date">Apr 25, 2006</div>We have moved to sf.net and start to use Subversion.
 
 <!-- news //-->
+<!--
 <div class="news-date">Jan 4, 2006</div>Mona OS ver.0.3.0alpha7 (<a
 href="http://sourceforge.net/project/showfiles.php?group_id=164970&package_id=205274&release_id=449836">Download</a>).
 <ul>
   <li>Network library uIP and HTTPD.</li>
 </ul>
+//-->
 <!-- google_ad_section_end -->
 </div><!-- id="content" //-->
 
