--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -39,7 +39,7 @@ var FRAME=0;
 <div id="content">
 <h2>About</h2>
 <p>
-Small, new and fast micro kernel operationg system written in C++.
+Small, new and fast micro kernel operating system written in C++.
 </p>
 <ul>
   <li>MonaOS is neither POSIX nor Windows clone.</li>
