--- a/htdocs/download.html
+++ b/htdocs/download.html
@@ -25,9 +25,9 @@ var FRAME=0;
   <ul id="sidemenu-ul">
     <li><a href="index.html">News</a></li>
     <li><a href="about.html">About</a></li>
-    <li><strong><a href="license.html">License</a></strong></li>
+    <li><a href="license.html">License</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><a href="download.html">Download</a></li>
+    <li><strong><a href="download.html">Download</a></strong></li>
     <li><a href="project.html">Project page</a></li>
     <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
     <li><a href="http://d.hatena.ne.jp/higepon/">Blog (Japanese)</a></li>
