--- a/htdocs/project.html
+++ b/htdocs/project.html
@@ -25,10 +25,10 @@ var FRAME=0;
   <ul id="sidemenu-ul">
     <li><a href="index.html">News</a></li>
     <li><a href="about.html">About</a></li>
-    <li><strong><a href="license.html">License</a></strong></li>
+    <li><a href="license.html">License</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="download.html">Download</a></li>
-    <li><a href="project.html">Project page</a></li>
+    <li><strong><a href="project.html">Project page</a></strong></li>
     <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
     <li><a href="http://d.hatena.ne.jp/higepon/">Blog (Japanese)</a></li>
     <li><a href="http://wiki.monaos.org/pukiwiki.php">Wiki (Japanese)</a></li>
