--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -57,7 +57,7 @@ Small, new and fast micro kernel operating system written in C++.
 <pre>svn co https://svn.sourceforge.net/svnroot/monaos monaos</pre>
 <ul>
   <li><a href="http://svn.sourceforge.net/viewvc/monaos/trunk/mona/">mona</a> - Kernel and core servers.</li>
-  <li><a href="http://svn.sourceforge.net/viewvc/monaos/trunk/contrib/">contrib</a> - Kernel and core Applications.</li>
+  <li><a href="http://svn.sourceforge.net/viewvc/monaos/trunk/contrib/">contrib</a> - Applications.</li>
 </ul>
 </div><!-- id="content" //-->
 
