--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -2,6 +2,8 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+   <meta name="keywords" content="Free,Operating,System,download,OS,Mona,MonaOS">
+   <meta name="description" content="MonaOS is a free operating system. You can get MonaOS and source code for free. MonaOS is new, small, simple, open source and well structured.">
    <link rel="stylesheet" type="text/css" media="screen" href="mona.css">
    <title>MonaOS - Contact</title>
 </head>
@@ -37,6 +39,7 @@ var FRAME=0;
 </div><!-- id="sidemenu" //-->
 
 <div id="content">
+<h1>MonaOS is Free Operating System.</h1>
 <div style="padding-bottom:25px;padding-top:10px;">
 Contact <img src="mailaddress_small.png">.
 </div>
