--- a/htdocs/license.html
+++ b/htdocs/license.html
@@ -2,6 +2,8 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+   <meta name="keywords" content="Free,Operating,System,download,OS,Mona,MonaOS">
+   <meta name="description" content="MonaOS is a free operating system. You can get MonaOS and source code for free. MonaOS is new, small, simple, open source and well structured.">
    <link rel="stylesheet" type="text/css" media="screen" href="mona.css">
    <title>MonaOS - License</title>
 </head>
@@ -38,7 +40,8 @@ var FRAME=0;
 
 <div id="content">
 <div style="padding-bottom:25px;padding-top:10px;">
-MonaOS is <a href="http://www.opensource.org/licenses/mit-license.php">The MIT License</a>.
+MonaOS is <a href="http://www.opensource.org/licenses/mit-license.php">The MIT License</a>.<br>
+It is also free operating system.
 </div>
 <div id="images">
 <img src="cui.png" alt="screenshot of CUI">
