--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -2,6 +2,8 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+   <meta name="keywords" content="Free,Operating,System,download,OS,Mona,MonaOS">
+   <meta name="description" content="MonaOS is a free operating system. You can get MonaOS and source code for free. MonaOS is new, small, simple, open source and well structured.">
    <link rel="stylesheet" type="text/css" media="screen" href="mona.css">
    <title>MonaOS - About</title>
 </head>
@@ -39,6 +41,7 @@ var FRAME=0;
 <div id="content">
 <h2>About</h2>
 <p>
+Free operating system.<br>
 Small, new and fast micro kernel operating system written in C++.
 </p>
 <ul>
