--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -57,10 +57,10 @@ Small, new and fast micro kernel operating system written in C++.
 
 <h2>Source code and Subversion</h2>
 <p>You can check out latest source code.</p>
-<pre>svn co https://svn.sourceforge.net/svnroot/monaos monaos</pre>
+<pre>svn co https://monaos.svn.sourceforge.net/svnroot/monaos monaos</pre>
 <ul>
-  <li><a href="http://svn.sourceforge.net/viewvc/monaos/trunk/mona/">mona</a> - Kernel and core servers.</li>
-  <li><a href="http://svn.sourceforge.net/viewvc/monaos/trunk/contrib/">contrib</a> - Applications.</li>
+  <li><a href="http://monaos.svn.sourceforge.net/viewvc/monaos/trunk/mona/">mona</a> - Kernel and core servers.</li>
+  <li><a href="http://monaos.svn.sourceforge.net/viewvc/monaos/trunk/contrib/">contrib</a> - Applications.</li>
 </ul>
 </div><!-- id="content" //-->
 
