--- a/htdocs/about.html
+++ b/htdocs/about.html
@@ -30,6 +30,7 @@ var FRAME=0;
     <li><a href="license.html">License</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="download.html">Download</a></li>
+    <li><a href="ml.html">Mailing list</a></li>
     <li><a href="project.html">Project page</a></li>
     <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
     <li><a href="http://d.hatena.ne.jp/higepon/">Blog (Japanese)</a></li>
