--- a/htdocs/contact.html
+++ b/htdocs/contact.html
@@ -30,6 +30,7 @@ var FRAME=0;
     <li><a href="license.html">License</a></li>
     <li><strong><a href="contact.html">Contact</a></strong></li>
     <li><a href="download.html">Download</a></li>
+    <li><a href="ml.html">Mailing list</a></li>
     <li><a href="project.html">Project page</a></li>
     <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
     <li><a href="http://d.hatena.ne.jp/higepon/">Blog (Japanese)</a></li>
@@ -41,7 +42,7 @@ var FRAME=0;
 <div id="content">
 <h1>MonaOS is Free Operating System.</h1>
 <div style="padding-bottom:25px;padding-top:10px;">
-Contact <img src="mailaddress_small.png">.
+Contact <img src="/higepon/mailaddress_small.png">.
 </div>
 <div id="images">
 <img src="cui.png" alt="screenshot of CUI">
