--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -29,6 +29,7 @@ var FRAME=0;
     <li><a href="license.html">License</a></li>
     <li><a href="contact.html">Contact</a></li>
     <li><a href="download.html">Download</a></li>
+    <li><a href="ml.html">Mailing list</a></li>
     <li><a href="project.html">Project page</a></li>
     <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
     <li><a href="http://d.hatena.ne.jp/higepon/">Blog (Japanese)</a></li>
@@ -68,6 +69,13 @@ It's new, small, simple, open source and well structured.<br>
 So, MonaOS may be suitable for education of operating system and program at school.<br>
 You can down load MonaOS for free at <a href="download.html" title="Download free operating system.">Download</a>.
 </p>
+
+<!-- news //-->
+<div class="news-date">Oct 5, 2007</div>Easy Mona Player for Windows with Qemu.(<a
+ href="http://sourceforge.net/project/showfiles.php?group_id=164970&package_id=247405&release_id=544240">Download</a>).
+<ul>
+  <li>Alpha version of Mona Music player.</li>
+</ul>
 
 <!-- news //-->
 <div class="news-date">May 27, 2007</div>Mona OS ver.0.3.0alpha9 (<a
@@ -120,6 +128,19 @@ href="http://sourceforge.net/project/showfiles.php?group_id=164970&package_id=20
 <div id="footer">
 <a href="http://sourceforge.net/donate/index.php?group_id=164970"><img src="project-support.jpg" width="88" height="32" border="0" alt="Support This Project" /> </a>
 Copyright &#169; 2002-2007 Higepon and the individuals listed on the ChangeLog entries. All rights reserved.
+<!-- nakanohito -->
+<script LANGUAGE="Javascript">
+<!--
+var refer = document.referrer;
+document.write("<a href='http://nakanohito.jp/'>");
+document.write("<img src='http://nakanohito.jp/an/?u=111546&h=442569&w=48&refer="+escape(parent.document.referrer)+"&url="+escape(parent.document.URL)+"' border='0' width='48' height='48' />");
+document.write("</a>");
+//-->
+</script>
+<noscript>
+<img src="http://nakanohito.jp/an/?u=111546&h=442569&w=48" width="48" height="48" alt="なかのひと" border="0" />
+</noscript>
+<!-- nakanohito end -->
 </div><!-- id="footer" //-->
 
 </body>
