--- a/htdocs/ml.html
+++ b/htdocs/ml.html
@@ -5,7 +5,7 @@
    <meta name="keywords" content="Free,Operating,System,download,OS,Mona,MonaOS">
    <meta name="description" content="MonaOS is a free operating system. You can get MonaOS and source code for free. MonaOS is new, small, simple, open source and well structured.">
    <link rel="stylesheet" type="text/css" media="screen" href="mona.css">
-   <title>MonaOS - Download - Free Operating System</title>
+   <title>MonaOS - Contact</title>
 </head>
 <body>
 <div id="header">
@@ -29,8 +29,8 @@ var FRAME=0;
     <li><a href="about.html">About</a></li>
     <li><a href="license.html">License</a></li>
     <li><a href="contact.html">Contact</a></li>
-    <li><strong><a href="download.html">Download</a></strong></li>
-    <li><a href="ml.html">Mailing list</a></li>
+    <li><a href="download.html">Download</a></li>
+    <li><strong><a href="ml.html">Mailing list</a></strong></li>
     <li><a href="project.html">Project page</a></li>
     <li><a href="http://higepon.blogspot.com/">Blog (English)</a></li>
     <li><a href="http://d.hatena.ne.jp/higepon/">Blog (Japanese)</a></li>
@@ -42,7 +42,12 @@ var FRAME=0;
 <div id="content">
 <h1>MonaOS is Free Operating System.</h1>
 <div style="padding-bottom:25px;padding-top:10px;">
-Download released files from <a href="http://sourceforge.net/project/showfiles.php?group_id=164970">SourceForge.net Mona OS: Files</a>.
+<h3>monaos-devel</h3>
+This list deals with core and implementation topics about Mona, often used to run patches for review.
+<h4>Subscribe</h4>
+<a href="https://lists.sourceforge.net/lists/listinfo/monaos-devel">https://lists.sourceforge.net/lists/listinfo/monaos-devel</a>
+<h4>Archives</h4>
+<a href="http://sourceforge.net/mailarchive/forum.php?forum_name=monaos-devel">http://sourceforge.net/mailarchive/forum.php?forum_name=monaos-devel</a>
 </div>
 <div id="images">
 <img src="cui.png" alt="screenshot of CUI">
